--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,6 +58,14 @@ android {
         }
     }
 
+    flavorDimensions 'version'
+    productFlavors {
+        dev {
+            dimension 'version'
+            applicationIdSuffix '.dev'
+        }
+    }
+
     testOptions {
         execution "ANDROIDX_TEST_ORCHESTRATOR"
   }
